# Tessera

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt  README_RU.md
.github/workflows/: build.yml
Shaders/: cloth_line.frag  cloth_line.vert  cloth_point.frag  cloth_point.vert  light_point.frag  light_point.vert  shader.frag  shader.vert  shader_chunk.vert  shader_indexed.vert  shader_palette.frag
demo/benchmark_demo/: main.cpp
demo/cloth/: SpringBackendFactory.cpp  SpringBackendFactory.h  SpringNetwork.cpp  SpringNetwork.h  main.cpp
demo/fractal_demo/: FractalTileMap.cpp  FractalTileMap.h  main.cpp
demo/life/capture_ui/: main.cpp
demo/life/full/: LifeMap.cpp  LifeMap.h  main.cpp
demo/life/minimal/: MiniLifeChunk.h  MiniLifeTileMap.cpp  main.cpp
demo/life_test/: main.cpp
demo/light/: LightField.cpp  LightField.h  README.md  main.cpp
demo/minimallife_demo/: MiniLifeTileMap.cpp  MiniLifeTileMap.h  main.cpp
docs/: README.md  architecture.html  new-demo.html
engine/automaton/: CellularAutomaton.cpp  CellularAutomaton.h  LifeLikeAutomaton.cpp  LifeLikeAutomaton.h
engine/chunk/: AABB.h  Chunk.cpp  Chunk.h  ChunkCoord.h  ChunkGrid.h  ChunkMapRenderer.cpp  ChunkMapRenderer.h  ChunkRenderer.cpp  ChunkRenderer.h  ChunkStore.cpp  ChunkStore.h  ChunkedTileMap.cpp  ChunkedTileMap.h
engine/core/: Application.cpp  Application.h  DefaultApplication.h  HexGrid.h  ParallelFor.h  TaskScheduler.cpp  TaskScheduler.h
engine/graphics/: Camera2D.cpp  Camera2D.h  CameraController.cpp  CameraController.h  GridRenderer.cpp  GridRenderer.h  IRenderable.h  ITileMapRenderer.h  Palette.h  Shader.cpp  Shader.h
engine/input/: Input.h  input.cpp
engine/simulation/: CpuLifeBackend.cpp  CpuLifeBackend.h  CudaLifeBackend.cu  CudaLifeBackend.h  CudaSpringBackend.cu  CudaSpringBackend.h  ISimulationBackend.h  LifeRule.h  SimulationBackendFactory.cpp  SimulationBackendFactory.h  SimulationCoordinator.cpp  SimulationCoordinator.h  SimulationManager.cpp  SimulationManager.h  WorldOccupancy.h
engine/tilemap/: IColorTileMap.h  ITilemap.h  IndexedTileMap.h
engine/utils/: GifExport.cpp  GifExport.h  RleLoader.cpp  RleLoader.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glm/: CMakeLists.txt
patterns/: gosper_gun.rle  r_pentomino.rle
tests/: README.md
tests/batch_benchmark/: main.cpp
tests/benchmark/: main.cpp
tests/capture/: main.cpp
tests/cloth_chunk_seam/: main.cpp
tests/cloth_cuda_smoke/: main.cpp
tests/cloth_reset_repro/: main.cpp
tests/correctness/: main.cpp
tests/light_field_wave/: main.cpp
tests/propagation/: main.cpp
tools/: capture_gif.py
